--- a/portofolio.html
+++ b/portofolio.html
@@ -101,7 +101,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-           <img src="rohit.jpg" alt="Profile Picture" class="profile-picture">
+           <img src="r.jpg" alt="Profile Picture" class="profile-picture">
             <h1>ROHIT K</h1>
             <p> BCA student</p>
         </div>
